Overflow fixes for Safari+

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -249,5 +249,11 @@
             background-position: calc(500px - 70px);
         }
     }
+    .overflow-fix {
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+    }
 }
 
